--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.25.4
+  firebase_messaging: ^14.7.15
+  flutter_local_notifications: ^16.3.2
+  app_settings: ^5.1.1
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
