--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_local_notifications: ^16.3.2
   app_settings: ^5.1.1
   get_storage: ^2.1.1
+  carousel_slider: ^4.2.1
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
@@ -64,8 +66,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
+    - assets/icons/
+    - assets/photos/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
